@@ -4,6 +4,11 @@ Release 4.0.9 (unreleased)
 Bug fixes:
 ----------
 
+- Fix face external force projection with tensorial diffusion
+  and porous models 1, 2.
+  This was impacting cases with head losses, improved pressure interpolation,
+  and scalar or tensorial volume porosity models (iporos=1, 2).
+
 - Fix crash in some polygon triangulation cases.
 
 - Fix spurious mapping of previous mass flux with order 1 in time scheme.
